prometheus-loki-grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cf"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "grafana.560384.xyz"
      secretName: grafana-tls-secret
  rules:
    - host: "grafana.560384.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
